--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body lang="en-US" onload="writeTweet();">
     <div class="container-fluid">
       <div class="jumbotron">
+
         <h1>Xavier</h1>
-        <p id="tweet">...</p>
+        
+        <p id="tweet">document.writeTweet()</p>
         <button type="button" class="btn btn-primary btn-lg"
                 onclick="writeTweet();">
           <span class="glyphicon glyphicon-repeat" aria-hidden="true"></span>
